# Backup

./: CMakeLists.txt  README.md  main.cpp
libs/cmdparser/: cmdparser.hpp
modules/SQLite3Cpp/: SQLite3Cpp.cpp  SQLite3Cpp.h
vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Backup.sln  Backup.vcxproj  Backup.vcxproj.filters  CMakeCache.txt  SQLite3Cpp.vcxproj  SQLite3Cpp.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
